clusters/talos-robbinsdale/apps-flux-new/test/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
  hostnames:
    - "test.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: test
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
